# Rusty-Wings-Chat-Server

./: .gitignore  Cargo.toml
src/: handler.rs  main.rs
src/chat-lib/: Cargo.toml
src/chat-lib/migrations/2023-12-01-130607_init/: down.sql  up.sql
src/chat-lib/migrations/2023-12-12-081325_messages/: up.sql
src/chat-lib/migrations/2023-12-13-092907_add-convo-name/: down.sql  up.sql
src/chat-lib/src/: endpoints.rs  lib.rs  methods.rs  models.rs  schema.rs
