[package]
name = "rusty-wings-chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"diesel" = { version = "2.1.4", features = ["postgres", "chrono","r2d2"] }
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
rusty-wings-chat-lib = { path = "src/chat-lib" }

