[package]
name = "rusty-wings-chat-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version =  "1.34.0", features = ["sync"] }


[dependencies.chrono]
features = ["serde"]
